--- a/doc/manual/entities.tex
+++ b/doc/manual/entities.tex
@@ -3,8 +3,8 @@ In the following, the main entities of ViennaGrid are explained. The nomenclatur
 
 \begin{figure}[tb]
 \centering
- \includegraphics[width=0.95\textwidth]{figures/entities.eps}
- \caption{Overview of the main entities in {\ViennaGrid} for a triangular mesh.}
+ \fbox{ \includegraphics[width=0.95\textwidth]{figures/entities.eps} }
+ \caption{Overview of the main entities in {\ViennaGrid} for a triangular mesh. A point refers to any location in the geometric space and does not carry topological information.}
  \label{fig:entities}
 \end{figure}
 
