--- a/doc/manual/viennagrid.bib
+++ b/doc/manual/viennagrid.bib
@@ -93,8 +93,21 @@
    title = {{VTK File Formats}},
    URL = {http://www.vtk.org/VTK/img/file-formats.pdf}
 }
-
-http://www.vtk.org/VTK/img/file-formats.pdf
+% -----------------------------------------------
+@misc{netgen,
+   title = {{Netgen Mesh Generator}},
+   URL = {http://sourceforge.net/projects/netgen-mesher/}
+}
+% -----------------------------------------------
+@misc{paraview,
+   title = {{Paraview - Open Source Scientific Visualization}},
+   URL = {http://www.paraview.org/}
+}
+% -----------------------------------------------
+@misc{opendx,
+   title = {{OpenDX}},
+   URL = {http://www.opendx.org/}
+}
 
 
 
