--- a/doc/manual/viennagrid.tex
+++ b/doc/manual/viennagrid.tex
@@ -63,6 +63,8 @@
 \newcommand{\ublas} {\texttt{ublas}}
 \newcommand{\GCC} {\texttt{GCC}}
 \newcommand{\NVIDIA} { {NVIDIA} }
+\newcommand{\OpenDX} { \texttt{OpenDX} }
+\newcommand{\Netgen} { \texttt{Netgen} }
 
 \renewcommand{\matrix}[1]{\boldsymbol{#1}}
 \renewcommand{\vector}[1]{\boldsymbol{#1}}
@@ -96,11 +98,11 @@
 \include{domainsetup}  %DONE
 \include{iterators}    %DONE, but updates required
 \include{algorithms}   %DONE
-\include{io}
-\include{data}
+\include{io}           %DONE
+\include{data}         %DONE
 %\include{benchmarks}  %Will be added in some later release. A single day has 24 hours only ;-)
 \include{internals}
-\include{design-decisions}
+\include{design-decisions} %DONE
 \include{orientations} 
 \include{versioning}   %DONE
 \include{changelogs}   %DONE
